force-app/main/default/objects/RWD_Approval_category_lookup__c/RWD_Approval_category_lookup__c.object-meta.xml
<CustomObject>
    <description>SOX object - Used to map Product SKU&apos;s to approval category.</description>
    <label>RWD Approval category lookup</label>
    <nameField>
        <label>RWD Approval category lookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RWD Approval category lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>