force-app/main/default/objects/RWD_Approval_category_lookup__c/fields/New_Approval_category__c.field-meta.xml
<CustomField>
    <fullName>New_Approval_category__c</fullName>
    <label>New Approval category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>