force-app/main/default/objects/RWD_Approval_category_lookup__c/fields/Old_Approval_Category__c.field-meta.xml
<CustomField>
    <fullName>Old_Approval_Category__c</fullName>
    <label>Old Approval Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete - Addon</fullName>
            </value>
            <value>
                <fullName>Complete Addon</fullName>
            </value>
            <value>
                <fullName>Hardware(H)</fullName>
            </value>
            <value>
                <fullName>Support(H)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>