force-app/main/default/objects/RWD_Approval_category_lookup__c/fields/SKU_Name__c.field-meta.xml
<CustomField>
    <fullName>SKU_Name__c</fullName>
    <label>SKU Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>