force-app/main/default/objects/RWD_Approval_category_lookup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>New_Approval_category__c</columns>
    <columns>Old_Approval_Category__c</columns>
    <columns>SKU_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>